# wasm-extensions

./: .bazelrc  .gitignore  BUILD  CODEOWNERS  Dockerfile-proxy  ENVIRONMENT.md  LICENSE  Makefile  README.md  WAF_wasm.cc  WORKSPACE  bazel-WAF-wasm  bazel-bin  bazel-out  bazel-testlogs  docker-compose.yaml  envoy-config.yaml  envoy-local.yaml  envoy.yaml  envoy_filter_http_wasm_example.cc  go.mod  go.sum
.github/workflows/: bazel.yaml  cpp.yaml  format.yaml  oidc-build.yaml  oidc-test.yaml  push.yaml  release.yaml  test.yaml
bazel/: wasm.bzl
doc/: development-setup.md  how-to-build-oci-images.md  release-process.md  write-a-wasm-extension-with-cpp.md  write-cpp-unit-test.md  write-integration-test.md  write-unit-test.md
example/: BUILD  README.md  WORKSPACE  plugin.cc  plugin.h
extensions/oidc/: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  deny.toml  docker-compose.yaml  envoy.yaml
extensions/oidc/k8s/: certificate-production.yml  ci.yml  configmap.yml  deployment-initContainer.yaml  deployment-pre-built.yml  ingress.yml  secret.yaml  service.yml
extensions/oidc/src/: config.rs  cookie.rs  discovery.rs  lib.rs  responses.rs
scripts/: get-dep.sh  update-dep.sh  update-guide.sh
test/: BUILD  config_parser_test.cc  config_test.cc  http_parser_test.cc  inventory.go  sqli_test.cc  test_common.h
utility/: BUILD  Makefile  config.cc  config.h  config_parser.cc
waf_sqli/: .gitignore  Makefile  README.md  build_test.sh  build_wasm.sh  envoy-config.yaml  envoy.yaml
wasm/: BUILD  Dockerfile-proxy  docker-compose.yaml  envoy_filter_http_wasm_example.cc
(+95 files in other folders)
